--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
 </ion-header>
@@ -14,16 +8,21 @@
     <ion-img width="80" height="80" [cache]="true" src="/assets/imgs/elios.png"></ion-img>
   </div>
 
-  <ion-list class="login-form">
+  <ion-list class="login-form" padding>
 
     <ion-item no-lines>
       <ion-label floating>Email</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="email"></ion-input>
     </ion-item>
 
     <ion-item no-lines>
       <ion-label floating>Mot de passe</ion-label>
       <ion-input type="password"></ion-input>
+    </ion-item>
+
+    <ion-item class="login-form-buttons" no-lines>
+      <button default ion-button item-right color="secondary" outline>S'inscrire</button>
+      <button default ion-button item-right color="primary" (click)="login()">{{ loginButton }}</button>
     </ion-item>
 
   </ion-list>
