Issue #2 - Added register function + post and get api service display error from response

--- a/src/pages/auth/register/register.html
+++ b/src/pages/auth/register/register.html
@@ -13,17 +13,17 @@
     <h3 padding-left padding-top>S'inscrire</h3>
     <ion-item>
       <ion-label floating>Email</ion-label>
-      <ion-input type="email"></ion-input>
+      <ion-input type="email" [(ngModel)]="email"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Mot de passe</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Répétez le mot de passe</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password_confirmation"></ion-input>
     </ion-item>
 
     <ion-item class="register-form-buttons" no-lines>
