--- a/src/pages/main/tabs/tabs.html
+++ b/src/pages/main/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs *ngIf="token">
   <ion-tab [root]="home" tabTitle="Miroirs" tabIcon="apps"></ion-tab>
-  <ion-tab tabTitle="Scanner" tabIcon="qr-scanner"></ion-tab>
+  <ion-tab [root]="addMirror" tabTitle="Scanner" tabIcon="qr-scanner"></ion-tab>
   <ion-tab [root]="account" tabTitle="Compte" tabIcon="contact"></ion-tab>
 </ion-tabs>
