--- a/src/pages/main/add-mirror/add-mirror.html
+++ b/src/pages/main/add-mirror/add-mirror.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Add a new mirror</ion-title>
+    <ion-title>Ajouter un miroir</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -13,4 +13,19 @@
 
   <button ion-button [navPush]="qrcodePage">Scanner QRCode</button>
 
+  <div class="mirror-input">
+    <p>Si vous n'avez pas la possibilité de scanner le QRCode, veuillez rentrer l'id du miroir directement:</p>
+
+    <ion-item>
+      <ion-label color="primary" stacked>ID du miroir</ion-label>
+      <ion-input type="text" placeholder="XXXX-XXXX-XXXX-XXXX" [(ngModel)]="mirrorId"></ion-input>
+    </ion-item>
+
+    <ion-item no-border no-lines>
+      <button ion-button (click)="linkMirror()">Envoyer</button>
+    </ion-item>
+
+  </div>
+
 </ion-content>
+
