Updated mirror link service + json config + api service

--- a/src/pages/main/tabs/tabs.html
+++ b/src/pages/main/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs *ngIf="token">
+<ion-tabs>
   <ion-tab [root]="home" tabTitle="Miroirs" tabIcon="apps"></ion-tab>
   <ion-tab [root]="addMirror" tabTitle="Scanner" tabIcon="qr-scanner"></ion-tab>
   <ion-tab [root]="account" tabTitle="Compte" tabIcon="contact"></ion-tab>
