--- a/src/pages/auth/login/login.html
+++ b/src/pages/auth/login/login.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 
-<ion-content class="login" padding>
+<ion-content class="login" padding no-bounce>
     <div class="login-header" text-center>
         <ion-img width="80" height="80" [cache]="true" src="/assets/imgs/elios.png"></ion-img>
     </div>
