--- a/src/pages/auth/lost-password/lost-password.html
+++ b/src/pages/auth/lost-password/lost-password.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 
-<ion-content class="register" padding>
+<ion-content class="register" padding no-bounce>
     <div class="register-header" text-center>
         <ion-img width="80" height="80" [cache]="true" src="/assets/imgs/elios.png"></ion-img>
     </div>
