--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -2,6 +2,11 @@
 
   <ion-navbar>
     <ion-title>Mes miroirs</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="navigate()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
