--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -12,6 +12,28 @@
 </ion-header>
 
 
-<ion-content padding>
-  <p text-center>Aucun miroir enregistré</p>
+<ion-content>
+  <ion-list *ngIf="mirrors !== undefined">
+
+    <ion-item-sliding *ngFor="let mirror of mirrors">
+      <ion-item>
+        <ion-avatar item-start>
+          <img class="img-os" src="">
+        </ion-avatar>
+        <div class="state" [style.background]="'#27c295'"></div>
+        <h2>{{ mirror.name }}</h2>
+        <p>{{ mirror.ip }}</p>
+        <ion-note item-end>
+          <ion-icon name="arrow-forward"></ion-icon>
+        </ion-note>
+      </ion-item>
+
+      <ion-item-options>
+        <button ion-button color="danger">
+          <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
