Added unlink service + refresh service

--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -29,7 +29,7 @@
       </ion-item>
 
       <ion-item-options>
-        <button ion-button color="danger">
+        <button ion-button color="danger" (click)="deleteMirror(mirror.id)">
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
