--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -1,11 +1,16 @@
 <ion-header>
-
+  <ion-navbar>
+    <ion-title>In progress</ion-title>
+  </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding text-center>
 
-  <h3 text-center>Fonctionnalité non disponible</h3>
-  <p text-center>Développement en cours...</p>
+  <h3>Fonctionnalité non disponible</h3>
+  <p>Développement en cours...</p>
+  <button ion-button color="primary" (click)="navigate('home')">
+    Retour
+  </button>
 
 </ion-content>
