--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>In progress</ion-title>
+    <ion-title>{{ mirrorName }}</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="mirrorSettings($event)">
+        <ion-icon name="settings"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
