Issue #15 - Updated popover actions + content

--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -10,12 +10,5 @@
 </ion-header>
 
 
-<ion-content padding text-center>
-
-  <h3>Fonctionnalité non disponible</h3>
-  <p>Développement en cours...</p>
-  <button ion-button color="primary" (click)="navigate('home')">
-    Retour
-  </button>
-
+<ion-content>
 </ion-content>
