--- a/src/pages/mirror/mirrorPopover/mirror-popover.html
+++ b/src/pages/mirror/mirrorPopover/mirror-popover.html
@@ -2,7 +2,7 @@
   <button menuClose ion-item>
     <ion-icon name="options" style="vertical-align: bottom; min-width: 22px; text-align:center"></ion-icon> &nbsp;Options
   </button>
-  <button menuClose ion-item>
+  <button menuClose ion-item (click)="logout()">
     <ion-icon name="return-left" style="vertical-align: bottom; min-width: 22px; text-align:center"></ion-icon> &nbsp;Switch
   </button>
 </ion-list>
