Added options page + updated popover

--- a/src/pages/mirror/mirrorPopover/mirror-popover.html
+++ b/src/pages/mirror/mirrorPopover/mirror-popover.html
@@ -1,5 +1,5 @@
 <ion-list no-lines>
-  <button menuClose ion-item>
+  <button menuClose ion-item (click)="navigate()">
     <ion-icon name="options" style="vertical-align: bottom; min-width: 22px; text-align:center"></ion-icon> &nbsp;Options
   </button>
   <button menuClose ion-item (click)="logout()">
