--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ mirrorName }}</ion-title>
+    <ion-title>{{ mirror.name }}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="mirrorSettings($event)">
         <ion-icon name="settings"></ion-icon>
