--- a/src/pages/mirror/mirror-options/mirror-options.html
+++ b/src/pages/mirror/mirror-options/mirror-options.html
@@ -19,7 +19,13 @@
   </div>
   <div class="date">
     <div class="date-content">
-      {{ mirror.created_at | date:'short'}}
+      {{ mirror.created_at }}
+    </div>
+  </div>
+  <div class="action-buttons">
+    <div class="edit-button" (click)="edit()">
+      <ion-icon name="md-create"></ion-icon>
+      <span class="action-text">Editer Miroir</span>
     </div>
   </div>
 </ion-content>
