--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -16,15 +16,29 @@
       <img src="/assets/imgs/mirror.png" height="175">
       <div class="text">
         <span class="name">{{ mirror.name }}</span>
-        <span class="model">Basic model</span>
+        <span class="model">{{ mirror.model }}</span>
         <span class="date">{{ mirror.updated_at }}</span>
       </div>
-      <div class="button"(click)="mirrorSettings($event)">
-          <ion-icon name="settings"></ion-icon>
+      <div class="button" (click)="mirrorSettings($event)">
+        <ion-icon name="settings"></ion-icon>
       </div>
     </div>
   </div>
   <div class="body">
-
+    <ion-list>
+      <ion-item-sliding *ngFor="let module of modules">
+        <ion-item>
+          <ion-avatar class="icon" item-start>
+            <ion-icon name="logo-dropbox"></ion-icon>
+          </ion-avatar>
+          <div class="state" [style.background]="'#27c295'"></div>
+          <h2>{{ module.title }}</h2>
+          <p>{{ module.repository }}</p>
+          <ion-note item-end>
+            <ion-icon name="ios-cloud-download-outline" style="color: #40c4ff"></ion-icon>
+          </ion-note>
+        </ion-item>
+      </ion-item-sliding>
+    </ion-list>
   </div>
 </ion-content>
