--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -35,9 +35,8 @@
       </ion-item>
 
       <ion-item-options>
-        <button ion-button color="danger" (click)="deleteMirror(slidingItem, mirror.id)">
-          <ion-icon name="trash"></ion-icon>
-          Delete
+        <button ion-button color="danger" (click)="deleteMirror(slidingItem, mirror.id)" large>
+          <ion-icon name="trash" style="padding: 0"></ion-icon>
         </button>
       </ion-item-options>
     </ion-item-sliding>
