--- a/src/pages/mirror/shop-tabs/shop-tabs.html
+++ b/src/pages/mirror/shop-tabs/shop-tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="mirror" [rootParams]="params" tabTitle="Mon miroir" tabIcon="home"></ion-tab>
-  <ion-tab [root]="stats" [rootParams]="params" tabTitle="Tendances" tabIcon="stats"></ion-tab>
+  <ion-tab [root]="apps" [rootParams]="params" tabTitle="Applications" tabIcon="albums"></ion-tab>
   <ion-tab [root]="search" [rootParams]="params" tabTitle="Recherche" tabIcon="search"></ion-tab>
 </ion-tabs>
