Can now detect if module is installed or not - not linked to api for del

--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -27,14 +27,14 @@
   <div class="body">
     <loader *ngIf="loader" padding></loader>
     <ion-list *ngIf="!loader">
-      <ion-item-sliding *ngFor="let module of modules" (click)="navigate('module', module)">
+      <ion-item-sliding *ngFor="let module of modules" (click)="navigate('module', module.module)">
         <ion-item>
           <ion-avatar class="icon" item-start>
             <ion-icon name="logo-dropbox"></ion-icon>
           </ion-avatar>
           <div class="state" [style.background]="'#27c295'"></div>
-          <h2>{{ module.title }}</h2>
-          <p>{{ module.repository }}</p>
+          <h2>{{ module.module.title }}</h2>
+          <p>{{ module.module.repository }}</p>
           <ion-note item-end>
             <ion-icon name="arrow-forward"></ion-icon>
           </ion-note>
