--- a/src/pages/mirror/mirror-options/mirror-options.html
+++ b/src/pages/mirror/mirror-options/mirror-options.html
@@ -12,7 +12,7 @@
   </div>
   <div class="background"></div>
   <div class="mirror">
-    <img src="/assets/imgs/mirror.png" height="175">
+    <img src="assets/imgs/mirror.png" height="175">
   </div>
   <div class="name">
     {{ mirror.name }}
