--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -21,8 +21,8 @@
 
   <ion-list *ngIf="mirrors !== undefined && !loader">
 
-    <ion-item-sliding *ngFor="let mirror of mirrors" #slidingItem (click)="navigate('mirror', { 'mirror': mirror })">
-      <ion-item>
+    <ion-item-sliding *ngFor="let mirror of mirrors" #slidingItem>
+      <ion-item (click)="navigate('mirror', { 'mirror': mirror })">
         <ion-avatar class="icon" item-start>
           <ion-icon name="aperture"></ion-icon>
         </ion-avatar>
