--- a/src/pages/mirror/apps/apps.html
+++ b/src/pages/mirror/apps/apps.html
@@ -10,10 +10,11 @@
   </ion-refresher>
   <loader *ngIf="loader" padding></loader>
   <ion-list *ngIf="!loader">
-    <ion-item-sliding *ngFor="let module of modules" (click)="navigate('module', module)">
+    <ion-item-sliding *ngFor="let module of modules.data" (click)="navigate('module', module)">
       <ion-item>
         <ion-avatar class="icon" item-start>
-          <ion-icon name="logo-dropbox"></ion-icon>
+          <img *ngIf="module.logo_url" src="{{ module.logo_url }}">
+          <ion-icon name="logo-dropbox" *ngIf="!module.logo_url"></ion-icon>
         </ion-avatar>
         <div class="state" [style.background]="'#27c295'"></div>
         <h2>{{ module.title }}</h2>
