--- a/src/pages/mirror/mirror.html
+++ b/src/pages/mirror/mirror.html
@@ -30,7 +30,8 @@
       <ion-item-sliding *ngFor="let module of modules" (click)="navigate('module', module.module)">
         <ion-item>
           <ion-avatar class="icon" item-start>
-            <ion-icon name="logo-dropbox"></ion-icon>
+            <img *ngIf="module.module.logo_url" src="{{ module.module.logo_url }}">
+            <ion-icon name="logo-dropbox" *ngIf="!module.module.logo_url"></ion-icon>
           </ion-avatar>
           <div class="state" [style.background]="'#27c295'"></div>
           <h2>{{ module.module.title }}</h2>
