--- a/src/pages/main/add-mirror/add-mirror-qr-code/add-mirror-qr-code.html
+++ b/src/pages/main/add-mirror/add-mirror-qr-code/add-mirror-qr-code.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>addMirrorQRCode</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 
 </ion-header>
