Updated home design and added big + buttons in menu + color changed

--- a/src/pages/main/add-mirror/add-mirror.html
+++ b/src/pages/main/add-mirror/add-mirror.html
@@ -2,6 +2,11 @@
 
   <ion-navbar>
     <ion-title>Ajouter un miroir</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="close($event)">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
