--- a/src/pages/main/home/home.html
+++ b/src/pages/main/home/home.html
@@ -1,12 +1,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Miroirs</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="navigate('addMirror')">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-title>
+      <img src="assets/imgs/elios.png" width="30px" style="vertical-align: middle">
+      <span class="title-text">Elios Mirror</span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
