Updated api provider + login error display

--- a/src/pages/auth/lost-password/lost-password.html
+++ b/src/pages/auth/lost-password/lost-password.html
@@ -5,7 +5,7 @@
 
 <ion-content class="register" padding no-bounce>
     <div class="register-header" text-center>
-        <ion-img width="80" height="80" [cache]="true" src="/assets/imgs/elios.png"></ion-img>
+        <ion-img width="80" height="80" [cache]="true" src="assets/imgs/elios.png"></ion-img>
     </div>
 
     <ion-list class="register-form" padding>
