--- a/src/pages/auth/login/login.html
+++ b/src/pages/auth/login/login.html
@@ -5,7 +5,7 @@
 
 <ion-content class="login" padding no-bounce>
     <div class="login-header" text-center>
-        <ion-img width="80" height="80" [cache]="true" src="/assets/imgs/elios.png"></ion-img>
+        <ion-img width="80" height="80" [cache]="true" src="assets/imgs/elios.png"></ion-img>
     </div>
 
     <ion-list class="login-form" padding>
